fix: update homepage url in package.json to be https

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "carbon-mini-unit-converter",
   "version": "0.1.0",
-  "homepage": "http://erin-hughes.github.io/carbon-mini-unit-converter",
+  "homepage": "https://erin-hughes.github.io/carbon-mini-unit-converter",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
